--- a/STRyper/Settings.xib
+++ b/STRyper/Settings.xib
@@ -24,7 +24,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="316" height="284"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uSe-Tg-Rtm">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uSe-Tg-Rtm">
                         <rect key="frame" x="18" y="263" width="82" height="14"/>
                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Sample sizing" id="EPG-kP-9zS">
                             <font key="font" metaFont="smallSystemBold"/>
@@ -46,7 +46,7 @@
                             </binding>
                         </connections>
                     </button>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jEe-KA-BXs" userLabel="Default sizing method:">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jEe-KA-BXs" userLabel="Default sizing method:">
                         <rect key="frame" x="18" y="224" width="123" height="14"/>
                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Default sizing method:" id="eiT-aF-Jqe">
                             <font key="font" metaFont="smallSystem"/>
@@ -77,7 +77,7 @@
                             <binding destination="oXY-Ga-9dS" name="selectedIndex" keyPath="values.DefaultSizingOrder" id="Tqu-0K-VwH"/>
                         </connections>
                     </popUpButton>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9yZ-ev-Uc4" userLabel="Genotyping">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9yZ-ev-Uc4" userLabel="Genotyping">
                         <rect key="frame" x="18" y="202" width="69" height="14"/>
                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Genotyping" id="Xbn-5O-8SE" userLabel="Genotyping">
                             <font key="font" metaFont="smallSystemBold"/>
@@ -85,7 +85,7 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3Sd-10-UKi">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3Sd-10-UKi">
                         <rect key="frame" x="18" y="185" width="222" height="14"/>
                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Default name for missing/uncalled alleles:" id="TaH-4W-Qy6">
                             <font key="font" metaFont="smallSystem"/>
@@ -93,7 +93,7 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField focusRingType="none" verticalHuggingPriority="750" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="D7S-ET-8Vx">
+                    <textField verticalHuggingPriority="750" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="D7S-ET-8Vx">
                         <rect key="frame" x="246" y="183" width="50" height="19"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="Gev-iN-e94"/>
@@ -111,7 +111,7 @@
                             </binding>
                         </connections>
                     </textField>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QCa-pv-ImL">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QCa-pv-ImL">
                         <rect key="frame" x="18" y="163" width="224" height="14"/>
                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Default name for non-binned alleles:" id="Yoc-mJ-Ya8">
                             <font key="font" metaFont="smallSystem"/>
@@ -119,7 +119,7 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField focusRingType="none" verticalHuggingPriority="750" tag="1" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8do-CE-iUa">
+                    <textField verticalHuggingPriority="750" tag="1" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8do-CE-iUa">
                         <rect key="frame" x="246" y="161" width="50" height="19"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="cH2-Z3-6jq"/>
@@ -137,7 +137,7 @@
                             </binding>
                         </connections>
                     </textField>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fHg-LG-cUI">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fHg-LG-cUI">
                         <rect key="frame" x="18" y="119" width="176" height="14"/>
                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Default visible range of traces:" id="pra-yw-mTb">
                             <font key="font" metaFont="smallSystemBold"/>
@@ -145,7 +145,7 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Mlm-cG-fgS">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Mlm-cG-fgS">
                         <rect key="frame" x="18" y="102" width="34" height="14"/>
                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Start:" id="gSI-HU-hAD">
                             <font key="font" metaFont="smallSystem"/>
@@ -153,7 +153,7 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField focusRingType="none" verticalHuggingPriority="750" tag="2" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FCR-zr-HMJ">
+                    <textField verticalHuggingPriority="750" tag="2" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FCR-zr-HMJ">
                         <rect key="frame" x="52" y="100" width="50" height="19"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="00s-TN-w7N"/>
@@ -172,7 +172,7 @@
                             </binding>
                         </connections>
                     </textField>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jSL-5l-Wfa">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jSL-5l-Wfa">
                         <rect key="frame" x="102" y="102" width="57" height="14"/>
                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="bp     End:" id="mDU-hD-QxM">
                             <font key="font" metaFont="smallSystem"/>
@@ -180,7 +180,7 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField focusRingType="none" verticalHuggingPriority="750" tag="3" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Th6-Yh-gLJ">
+                    <textField verticalHuggingPriority="750" tag="3" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Th6-Yh-gLJ">
                         <rect key="frame" x="159" y="100" width="50" height="19"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="Pp5-Po-W67"/>
@@ -199,7 +199,7 @@
                             </binding>
                         </connections>
                     </textField>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="r7V-4r-Krv">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="r7V-4r-Krv">
                         <rect key="frame" x="209" y="102" width="18" height="14"/>
                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="bp" id="zWA-uE-hBV">
                             <font key="font" metaFont="smallSystem"/>
@@ -207,7 +207,7 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="EAx-VE-G92" userLabel="When scaling views to highest peak:">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="EAx-VE-G92" userLabel="When scaling views to highest peak:">
                         <rect key="frame" x="18" y="78" width="213" height="14"/>
                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="When scaling views to highest peaks:" id="Gtl-BN-0Ce">
                             <font key="font" metaFont="smallSystemBold"/>
@@ -229,7 +229,7 @@
                             </binding>
                         </connections>
                     </button>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="pmw-k5-0yM" userLabel="When scaling views to highest peak:">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="pmw-k5-0yM" userLabel="When scaling views to highest peak:">
                         <rect key="frame" x="18" y="39" width="233" height="14"/>
                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="When subtracting baseline fluorescence:" id="u7J-W6-7eV">
                             <font key="font" metaFont="smallSystemBold"/>
