--- a/STRyper/Main window components/RightPane.xib
+++ b/STRyper/Main window components/RightPane.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="22505" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22689"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -18,13 +18,13 @@
             <rect key="frame" x="0.0" y="0.0" width="652" height="331"/>
             <subviews>
                 <scrollView borderType="none" horizontalLineScroll="16" horizontalPageScroll="10" verticalLineScroll="16" verticalPageScroll="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="MzI-yj-wFf">
-                    <rect key="frame" x="0.0" y="30" width="652" height="215"/>
+                    <rect key="frame" x="0.0" y="30" width="652" height="92"/>
                     <clipView key="contentView" id="odp-jd-7as">
-                        <rect key="frame" x="0.0" y="0.0" width="652" height="215"/>
+                        <rect key="frame" x="0.0" y="0.0" width="652" height="92"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <outlineView identifier="traceOutlineView" verticalHuggingPriority="750" tag="3" allowsExpansionToolTips="YES" columnAutoresizingStyle="none" tableStyle="plain" selectionHighlightStyle="none" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="16" headerView="c1B-BF-T33" viewBased="YES" floatsGroupRows="NO" outlineTableColumn="zpk-aZ-Se7" id="0qS-ci-Tr3">
-                                <rect key="frame" x="0.0" y="0.0" width="652" height="187"/>
+                                <rect key="frame" x="0.0" y="0.0" width="652" height="135"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <size key="intercellSpacing" width="3" height="0.0"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -111,11 +111,11 @@
                         </subviews>
                     </clipView>
                     <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="7Jw-gM-kpN">
-                        <rect key="frame" x="0.0" y="199" width="652" height="16"/>
+                        <rect key="frame" x="0.0" y="76" width="652" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="6JR-Nv-5mi">
-                        <rect key="frame" x="636" y="28" width="16" height="187"/>
+                        <rect key="frame" x="636" y="28" width="16" height="64"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <tableHeaderView key="headerView" wantsLayer="YES" id="c1B-BF-T33" customClass="TableHeaderView">
@@ -141,7 +141,7 @@
                         </segments>
                     </segmentedCell>
                 </segmentedControl>
-                <button toolTip="Syncrhonize  positions (^H)" tag="-2" horizontalCompressionResistancePriority="752" translatesAutoresizingMaskIntoConstraints="NO" id="XLb-W5-J7u" userLabel="sync horizontally">
+                <button toolTip="Synchronize  positions (^H)" tag="-2" horizontalCompressionResistancePriority="752" translatesAutoresizingMaskIntoConstraints="NO" id="XLb-W5-J7u" userLabel="sync horizontally">
                     <rect key="frame" x="206" y="5" width="20" height="20"/>
                     <buttonCell key="cell" type="bevel" bezelStyle="regularSquare" image="sync views magnet off" imagePosition="only" alignment="center" alternateImage="sync views magnet pressed" state="on" inset="2" id="Dzt-JX-Nuj">
                         <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
