--- a/STRyper/Main window components/SamplePane.xib
+++ b/STRyper/Main window components/SamplePane.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="22505" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22689"/>
         <capability name="System colors introduced in macOS 10.14" minToolsVersion="10.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,7 +26,7 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <clipView key="contentView" id="tYv-Hh-kQD">
                         <rect key="frame" x="0.0" y="0.0" width="584" height="252"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <tableView identifier="sampleTable" focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="none" tableStyle="plain" alternatingRowBackgroundColors="YES" autosaveColumns="NO" rowHeight="16" rowSizeStyle="automatic" headerView="yhO-Rg-Mgn" viewBased="YES" floatsGroupRows="NO" id="KUu-Te-JeL" userLabel="sample table">
                                 <rect key="frame" x="0.0" y="0.0" width="584" height="224"/>
@@ -52,7 +52,7 @@
                                                 <rect key="frame" x="1" y="0.0" width="119" height="16"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
-                                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="p3Q-Tm-2TA" userLabel="Text">
+                                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="p3Q-Tm-2TA" userLabel="Text">
                                                         <rect key="frame" x="0.0" y="1" width="119" height="14"/>
                                                         <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" selectable="YES" sendsActionOnEndEditing="YES" title="Text field" id="Sdu-GK-t4S" userLabel="tex cell">
                                                             <font key="font" metaFont="smallSystem"/>
@@ -81,7 +81,7 @@
                                                 <rect key="frame" x="1" y="16" width="119" height="16"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
-                                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="VT1-Ib-DhN" userLabel="date">
+                                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="VT1-Ib-DhN" userLabel="date">
                                                         <rect key="frame" x="0.0" y="1" width="119" height="14"/>
                                                         <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" selectable="YES" sendsActionOnEndEditing="YES" title="date" id="fhA-nf-Zde" userLabel="tex cell">
                                                             <dateFormatter key="formatter" dateStyle="short" timeStyle="short" id="Gm8-2B-3zA"/>
@@ -132,7 +132,7 @@
                                                 <rect key="frame" x="1" y="48" width="119" height="16"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 <subviews>
-                                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="YQD-2P-jKR">
+                                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="YQD-2P-jKR">
                                                         <rect key="frame" x="0.0" y="1" width="119" height="14"/>
                                                         <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" selectable="YES" sendsActionOnEndEditing="YES" title="size" id="uX0-cH-I0w">
                                                             <numberFormatter key="formatter" formatterBehavior="custom10_4" usesGroupingSeparator="NO" formatWidth="-1" groupingSize="0" minimumIntegerDigits="1" maximumIntegerDigits="42" maximumFractionDigits="1" id="xA0-zB-J7s"/>
@@ -163,7 +163,7 @@
                                                         </constraints>
                                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSActionTemplate" id="M1J-Nu-XNT"/>
                                                     </imageView>
-                                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="251" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tf2-gt-EcX">
+                                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="251" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tf2-gt-EcX">
                                                         <rect key="frame" x="24" y="1" width="84" height="14"/>
                                                         <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="qyV-DW-6Ve">
                                                             <numberFormatter key="formatter" formatterBehavior="custom10_4" numberStyle="percent" formatWidth="-1" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="1" id="JPg-OB-B3h">
@@ -199,7 +199,7 @@
                                                         </constraints>
                                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSActionTemplate" id="Ctc-DY-LCJ"/>
                                                     </imageView>
-                                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="251" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0xc-EW-0SW">
+                                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="251" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0xc-EW-0SW">
                                                         <rect key="frame" x="24" y="1" width="84" height="14"/>
                                                         <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="UwL-K3-YaA">
                                                             <font key="font" metaFont="smallSystem"/>
@@ -245,7 +245,7 @@
                                                 <rect key="frame" x="1" y="112" width="119" height="16"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
-                                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="DUg-s1-E1W" userLabel="Text">
+                                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="DUg-s1-E1W" userLabel="Text">
                                                         <rect key="frame" x="0.0" y="1" width="119" height="14"/>
                                                         <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" selectable="YES" sendsActionOnEndEditing="YES" title="gauge value" id="gJo-B1-Zof" userLabel="tex cell">
                                                             <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="percent" formatWidth="-1" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" id="Q4k-9M-dr6">
@@ -280,7 +280,7 @@
                                                             <font key="font" metaFont="systemBold" size="12"/>
                                                         </buttonCell>
                                                     </button>
-                                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="OxV-cJ-f1r" userLabel="Text field">
+                                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="OxV-cJ-f1r" userLabel="Text field">
                                                         <rect key="frame" x="21" y="1" width="88" height="16"/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Sample Name" id="zBB-SW-FpQ">
                                                             <font key="font" usesAppearanceFont="YES"/>
@@ -430,7 +430,7 @@
                         </connections>
                     </menu>
                 </menuItem>
-                <menuItem title="Call Genotypes" offStateImage="bin alleles badge" id="W0E-mx-gbK">
+                <menuItem title="Find Alleles" offStateImage="callAllelesBadge" id="W0E-mx-gbK">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="callGenotypes:" target="-2" id="oDd-p2-GTa"/>
@@ -455,6 +455,12 @@
                         <action selector="copy:" target="-2" id="bsM-pM-8Tc"/>
                     </connections>
                 </menuItem>
+                <menuItem title="Paste Marker Offsets" offStateImage="paste offset" identifier="pasteOffsets" id="RcH-KH-mzB">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="pasteOffsets:" target="-2" id="c1o-OF-0vc"/>
+                    </connections>
+                </menuItem>
                 <menuItem title="Delete" offStateImage="trash" id="HDd-Uo-Jo3">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
@@ -471,8 +477,8 @@
     </objects>
     <resources>
         <image name="NSActionTemplate" width="20" height="20"/>
-        <image name="bin alleles badge" width="15" height="15"/>
         <image name="bottomBar" width="20" height="20"/>
+        <image name="callAllelesBadge" width="15" height="15"/>
         <image name="circle arrow down" width="15" height="15"/>
         <image name="copy" width="15" height="14"/>
         <image name="filterButton" width="25" height="25"/>
@@ -482,6 +488,7 @@
         <image name="import samples" width="32" height="32"/>
         <image name="looking left" width="15" height="15"/>
         <image name="panelBadgeMenu" width="15" height="12"/>
+        <image name="paste offset" width="14" height="14"/>
         <image name="sizeStandard" width="15" height="15"/>
         <image name="trash" width="15" height="15"/>
     </resources>
