--- a/STRyper/Main window components/GenotypeTab.xib
+++ b/STRyper/Main window components/GenotypeTab.xib
@@ -45,7 +45,7 @@
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
-                                        <sortDescriptor key="sortDescriptorPrototype" selector="compare:" sortKey="status"/>
+                                        <sortDescriptor key="sortDescriptorPrototype" selector="compare:" sortKey="statusText"/>
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                     </tableColumn>
                                 </tableColumns>
